Bug 156057 - Crash in CoreProtocol destructor on exit
Summary: Crash in CoreProtocol destructor on exit
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: 0.50.0
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-17 23:56 UTC by Ritesh Raj Sarraf
Modified: 2008-04-01 21:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
backtrace (1.59 KB, text/plain)
2008-01-17 23:56 UTC, Ritesh Raj Sarraf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2008-01-17 23:56:12 UTC
Version:            (using KDE 4.0.0)
Installed from:    Debian testing/unstable Packages
OS:                Linux

I'm using KDE4 Kopete.
And it crashes on exit.
I'll attach the bug trace separately.
Comment 1 Ritesh Raj Sarraf 2008-01-17 23:56:55 UTC
Created attachment 23110 [details]
backtrace
Comment 2 Matt Rogers 2008-02-07 05:49:47 UTC
Using host libthread_db library "/lib/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb57c58d0 (LWP 5382)]
[KCrash handler]
#5  0xffffe410 in __kernel_vsyscall ()
#6  0xb6731eb5 in raise () from /lib/i686/cmov/libc.so.6
#7  0xb6733831 in abort () from /lib/i686/cmov/libc.so.6
#8  0xb67754e5 in free_check () from /lib/i686/cmov/libc.so.6
#9  0xb6776145 in free () from /lib/i686/cmov/libc.so.6
#10 0xb690ae41 in operator delete () from /usr/lib/libstdc++.so.6
#11 0xb345e902 in ~CoreProtocol (this=0x8714428)
    at /tmp/buildd/kdenetwork-4.0.0/kopete/protocols/jabber/libiris/iris/xmpp-core/protocol.cpp:605
#12 0xb7ef4e14 in QObjectPrivate::deleteChildren (this=0x80bb538)
    at kernel/qobject.cpp:1934
#13 0xb7ef68ce in ~QObject (this=0xbfe9f17c) at kernel/qobject.cpp:823
#14 0xb7ee38cf in ~QCoreApplication (this=0xbfe9f17c)
    at kernel/qcoreapplication.cpp:478
#15 0xb70140f1 in ~QApplication (this=0xbfe9f17c)
    at kernel/qapplication.cpp:995
#16 0xb7a0767a in ~KApplication (this=0xbfe9f17c)
    at /tmp/buildd/kde4libs-4.0.0/kdeui/kernel/kapplication.cpp:914
#17 0xb7a0eea8 in ~KUniqueApplication (this=0xbfe9f17c)
    at /tmp/buildd/kde4libs-4.0.0/kdeui/kernel/kuniqueapplication.cpp:328
#18 0x0808a216 in ~KopeteApplication (this=0xbfe9f17c)
    at /tmp/buildd/kdenetwork-4.0.0/kopete/kopete/kopeteapplication.cpp:108
#19 0x080896a4 in main (argc=3, argv=0xbfe9f564)
    at /tmp/buildd/kdenetwork-4.0.0/kopete/kopete/main.cpp:102
#20 0xb671d450 in __libc_start_main () from /lib/i686/cmov/libc.so.6
#21 0x08062ff1 in _start ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 3 Roman Jarosz 2008-04-01 21:09:54 UTC
SVN commit 792652 by rjarosz:

Fix bug 160000: kopete segfault in Jabber protocol at exit
It crashes because "CoreProtocol client;" and "CoreProtocol srv;" in ClientStream::Private are deleted twice.

BUG: 156057
BUG: 160000



 A             022_fix_crash.patch  
 M  +1 -1      iris/xmpp-core/xmlprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=792652
Comment 4 Roman Jarosz 2008-04-01 21:11:30 UTC
SVN commit 792654 by rjarosz:

Backport fix for bug 160000: kopete segfault in Jabber protocol at exit
It crashes because "CoreProtocol client;" and "CoreProtocol srv;" in ClientStream::Private are deleted twice.

CCBUG: 156057
CCBUG: 160000



 A             022_fix_crash.patch  
 M  +1 -1      iris/xmpp-core/xmlprotocol.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=792654