Fix bug 160000: kopete segfault in Jabber protocol at exit It crashes because "CoreProtocol client;" and "CoreProtocol srv;" in ClientStream::Private are deleted twice.

BUG: 156057
BUG: 160000


svn path=/trunk/KDE/kdenetwork/kopete/; revision=792652